<?xml version="1.0"?>
<package>
  <name>lmcma_path_planner</name>
  <version>0.0.0</version>
  <description>lmcma_path_planner</description>

  <maintainer email="behnam.asadi@gmail.com">Behnam Asadi</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>ompl</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>cmake_modules</run_depend>



</package>
